[package]
name = "vulkan"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#
# start vulkan
# for more vulkan info https://kylemayes.github.io/vulkanalia/development_environment.html#cargo-project
#
anyhow = "1" # Error handling
lazy_static = "1" # Store static data like vertices
log = "0.4" # logging statements
nalgebra-glm = "0.17" # Rust replacement for GLM (graphics math library)
png = "0.17.5" # load PNGs to use as textures
pretty_env_logger = "0.4" # Print logs to the console
thiserror = "1" # Define custom errors types without boilerplate
tobj = "3.2.2" # load 3D models in the Wavefront .obj format
vulkanalia = { version = "=0.15.0", features = [
    "libloading",
    "window",
] } # Call the Vulkan API
winit = "0.27.1" # create a window to render to
#
